# kartograph

./: .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  README.md  argocd-application.yaml  setup-pre-commit.sh
extraction/: .gitignore  BASELINE_ANALYSIS.md  COST_TRACKING_INTEGRATION.md  DISCOVERY_COMPARISON.md  ENTITY_DISCOVERY_REPORT_CODE.md  EXTRACTION_ERROR_ANALYSIS.md  GENERAL_FRAMEWORK_SUMMARY.md  IMPLEMENTATION_STATUS.md  ITERATIONS.md  ITERATION_1_CHANGES.md  ITERATION_2_CHANGES.md  ITERATION_3_CHANGES.md  ITERATION_4_CHANGES.md  ITERATION_5_CHANGES.md  ITERATION_6_CHANGES.md  ITERATION_6_SCHEMA_GUIDED_RESULTS.md  ITERATION_7_CHANGES.md  ITERATION_8_CHANGES.md  ITERATION_8_TEST_RESULTS.md  ITERATION_PLAN.md  PROCESS.md  PROCESS.md.backup  README.md  TEST_STATUS.md  TOKEN_TRACKING_INVESTIGATION.md  claude_cli_full_extraction.py  extract_sd_sre_users.py  extractor.py  load_dgraph.py  metrics  parse_nquads.py  pyproject.toml  report  test_mcp_event_structure.py  trace_mcp_issue.md
extraction/.specify/memory/: IMPLEMENTATION_STATUS.md  REMAINING_WORK.md  TOKEN_TRACKING_INVESTIGATION.md  constitution.md
extraction/docs/: PROCESS.md  USAGE.md
extraction/docs/architecture/: component-architecture.md  extraction-sequence.md
extraction/docs/legacy-scripts/: claude_cli_extraction_test.py  fix_extraction_data.py  load_dgraph.py  load_neo4j.py
extraction/kg_extractor/: __init__.py  cli.py  config.py  cost_estimator.py  cost_tracker.py  exceptions.py  models.py  orchestrator.py  progress.py
extraction/kg_extractor/agents/: __init__.py  extraction.py
extraction/kg_extractor/checkpoint/: __init__.py  disk_store.py  (+3 more)
extraction/tests/: __init__.py  conftest.py  test_package.py
extraction/working/: DISCOVERED_ENTITY_TYPES.md  ENHANCED_QUERY_EXAMPLES.md  ENHANCEMENT_COMPARISON.md  ENTITY_DISCOVERY_REPORT_APPINTERFACE.md  ENTITY_TYPE_DISCOVERY_REPORT.md  EXECUTION_SUMMARY.md  EXTRACTION_REPORT.md  FINAL_EXECUTION_SUMMARY.md  GENERAL_FRAMEWORK_FULL_RESULTS.md  GENERAL_FRAMEWORK_TEST_RESULTS.md  README.md  RESULTS_VISUALIZATION.md  TEST_SUMMARY.md  extract_enhanced_kg.py  extract_kg.py  full_general_framework_extraction.py  general_framework_extraction.py
(+253 files in other folders)
